Fix overflow bug

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -752,6 +752,10 @@ video {
   border-color: rgb(229 231 235 / var(--tw-divide-opacity, 1));
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
